@@ -141,14 +141,8 @@
 #include "gblvars.h"
 #include "utils.h"
 #include "version.h"
-/*
-Include the ICU heads. 23/sep/2009
-*/
-#include "unicode/ustdio.h"
-#include "unicode/uchar.h"
-#include "unicode/ustring.h"
-#include "unicode/ucnv.h"
-#include "unicode/ucol.h"
+
+
 /***************************************************************************
  * WEB section number:	 325
  * ~~~~~~~~~~~~~~~~~~~
