@@ -115,13 +115,6 @@
 #include "utils.h"
 #include "version.h"
 
-/*
-Include the ICU heads. 23/sep/2009
-*/
-#include "unicode/uchar.h"
-#include "unicode/ustdio.h"
-#include "unicode/ucnv.h"
-#include "unicode/ucol.h"
 
 /***************************************************************************
  * WEB section number:	 39
